--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Учебная страница</title>
     </head>
     <body>
-        <script src="Script/script.js"></script>
+        <script src="script/script.js"></script>
     </body>
 </html>
