--- a/3D Glo/index.html
+++ b/3D Glo/index.html
@@ -169,21 +169,19 @@
 		<div class="underline"></div>
 		<ul class="portfolio-content" id="all-progects">
 			<li class="portfolio-item portfolio-item-active"><img src="images/portfilio/portfolio-01.jpg"
-																														alt="portfolio"></li>
+																					alt="portfolio"></li>
+			<li class="portfolio-item"><img src="images/portfilio/portfolio-02.jpg" alt="portfolio"></li>
+			<li class="portfolio-item"><img src="images/portfilio/portfolio-03.jpg" alt="portfolio"></li>
 			<li class="portfolio-item"><img src="images/portfilio/portfolio-04.jpg" alt="portfolio"></li>
+			<li class="portfolio-item"><img src="images/portfilio/portfolio-05.jpg" alt="portfolio"></li>
 			<li class="portfolio-item"><img src="images/portfilio/portfolio-06.jpg" alt="portfolio"></li>
 			<li class="portfolio-item"><img src="images/portfilio/portfolio-07.jpg" alt="portfolio"></li>
 			<li class="portfolio-item"><img src="images/portfilio/portfolio-08.jpg" alt="portfolio"></li>
+			<li class="portfolio-item"><img src="images/portfilio/portfolio-09.jpg" alt="portfolio"></li>
 			<li class="portfolio-item"><img src="images/portfilio/portfolio-10.jpg" alt="portfolio"></li>
 			<a href="#" class="portfolio-btn prev" id="arrow-left"></a>
 			<a href="#" class="portfolio-btn next" id="arrow-right"></a>
 			<ul class="portfolio-dots">
-				<li class="dot dot-active"></li>
-				<li class="dot"></li>
-				<li class="dot"></li>
-				<li class="dot"></li>
-				<li class="dot"></li>
-				<li class="dot"></li>
 			</ul>
 		</ul>
 	</div>
