сборка проекта и настройка webpack

--- a/index.html
+++ b/index.html
@@ -414,6 +414,6 @@
 		</div>
 	</div>
 </div>
-<script src="./script/script.js"></script>
+<script src="./dist/dev-bundle.js"></script>
 </body>
 </html>
